Fix cross platform issue with ImageLoader unit test